Flask to use https
setup flask to use https

--- a/REST_Server/templates/home.html
+++ b/REST_Server/templates/home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h2>
-        You have signed in to Bungie.net!
+        This is just a server to handle some APIs
     </h2>
 </body>
 </html>
