--- a/REST_Server/templates/home.html
+++ b/REST_Server/templates/home.html
@@ -1,12 +1,266 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Application Home Page</title>
-</head>
-<body>
-    <h2>
-        This is just a server to handle some APIs
-    </h2>
+ <head>
+   <title>Michael Scarfi</title>
+   <!-- Bootstrap core CSS -->
+   <link href="css/bootstrap.css" rel="stylesheet">
+   <link rel="stylesheet" href="css/font-awesome.min.css">
+
+   <!-- Link the main.css stylesheet -->
+   <link href="css/main.css" rel="stylesheet">
+   
+   <!-- OPTIONAL: Google Fonts (don't forget to edit main.css also) -->
+   <link href='//fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
+   <link href='//fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
+
+   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+   <!--[if lt IE 9]>
+     <script src="js/html5shiv.js"></script>
+     <script src="js/respond.min.js"></script>
+   <![endif]-->
+ </head>
+ <body>
+
+
+
+   <div class="header" id="headerwrap">
+     <div class="container">
+       <div class="row centered">
+         <div class="col-lg-12">
+           <h1>Michael Scarfi</h1>
+           <h3>Developer, Engineer, System Administrator |
+            <a href="mailto:michael.scarfi@gmail.com">michael.scarfi@gmail.com</a>
+            |
+            <a href="https://github.com/michaelScarfi">github</a>
+            |
+            <a href="https://www.linkedin.com/in/michael-scarfi-9a8b0b114/">LinkedIn</a>
+           </h3>
+         </div><!--/.col-lg-12-->
+       </div><!--/.row-->
+     </div><!--/.container-->
+   </div><!--/.#headerwrap-->
+
+   <section id="about" name="about"></section>
+   <div class="about">
+     <div class="container">
+       <div class="row"> 
+         <div class="col-lg-2 col-lg-offset-1">
+           <h5>ABOUT</h5>
+         </div>
+         <div class="col-lg-6">
+  <p>I am an IT professional specializing in Developement, Technical Support, and System Administration.  I enjoy challenges and love to create.  I have a wide variety of skills, many of which were learned through self-taught or independt study.  </p>
+  </div>
+         <div class="col-lg-3">
+           <p><a href="https://drive.google.com/uc?export=download&id=1xRSqH6rdrwtlqzyYU_B3agmI1kulrWm1"><i class="icon-file"></i> <sm>Download PDF</sm></a></p>
+         </div>
+   
+       </div><!--/.row-->
+     </div><!--/.container-->
+   </div><!--/ #intro-->
+<section id="resume" name="resume"></section>
+  <!-- Skills section -->
+  <div class="container desc">
+    <div class="row">
+
+            <div class="col-lg-2 col-lg-offset-1">
+                <h5>Certifications, Skills, Knowledge, and Expertise</h5>
+            </div>
+            <!-- EDIT: work line 1 -->
+            <div class="col-lg-6">
+                <p class="tight"><t>Programming/Data Science </t><br/>
+                </p>
+                <p>
+                    <more>
+                        IBM Machine Learning with Python certifiction<br/>
+                        Python3<br/>
+                        C and Java<br/>
+                        HTML, CSS, and Javascript<br/>
+                        REST API Server hosting and Integration<br/>
+                        MySql, MariaDB, Microsoft SQL<br/>
+                        MicroStrategy, Discord, and Bungie APIs<br/>
+                        3D modeling and game creation<br/>
+                        Survey knowledge of cryptology and game theory
+                </more></p>
+            </div>
+            
+            <div class="col-lg-6 col-lg-offset-3">
+                <p class="tight"><t>Systems and acrchitecture </t><br/>
+                </p>
+                <p>
+                    <more>
+                        CompTia Security+  (2016-2019 – Exp.)<br/>
+                        Topics of Cisco Certified Network Associate<br/>
+                        Linux (various distributions)<br/>
+                        Microsoft Windows OS<br/>
+                        Microsoft Server<br/>
+                        Microsoft AD<br/>
+                        MicroStrategy Intelligence-Server<br/>
+                        MicroStrategy SDK/APIs<br/>
+                        Windows Deployment Services (WDS)<br/>
+                        Apache Kafka and Zookeeper<br/>
+                        CMD and terminal interfaces
+                </more></p>
+            </div>
+            
+            <div class="col-lg-6 col-lg-offset-3">
+                <p class="tight"><t>Systems and acrchitecture </t><br/>
+                </p>
+                <p>
+                    <more>
+                        Eclipse, Visual Studio Code, Android Studio<br/>
+                        Microsoft Office<br/>
+                        MicroStrategy Web, Library, Mobile<br/>
+                        MicroStrategy Software and application<br/>
+                        Audio/Visual Equipment<br/>
+                        Salesforce<br/>
+                        Networking hardware<br/>
+                        Server hardware<br/>
+                        Desktop PC internal hardware
+                </more></p>
+            </div>
+    </div><!--/.row -->
+    <br>
+    <hr>
+</div><!--/.container -->
+
+   <!-- WORK SECTION -->
+   <div class="container desc">
+       <div class="row">
+
+               <div class="col-lg-2 col-lg-offset-1">
+                   <h5>Work Experience</h5>
+               </div>
+               <!-- EDIT: work line 1 -->
+               <div class="col-lg-6">
+                   <p class="tight"><t>Support Engineer </t><br/>
+                       MicroStrategy <br/>
+                   </p>
+                   <p><more>
+                        Created SDK samples using Java and third party Java APIs that were professionally peer reviewed and published to github  for public use<br/>
+                        Performed advance troubleshooting of multiple areas of the MicroStrategy product including the MSTR SDK, APIs, and MicroStrategy packaged 3rd party tools such as Apache Kafka.<br/>
+                        Created Knowledge Base articles<br/>
+                        Support Associate (May 2019 - Feb 2020)<br/>
+                        Received training in troubleshooting MSTR Server, SDK, and Web products <br/>
+                        Began to fulfill the role of Support Engineer by taking Engineer cases<br/>
+                        Participated in MSTR training and become a certified MSTR Analyst and Architect<br/>
+                        Answered phone calls, created cases, and handled administrative cases
+                    </more></p>
+               </div>
+               <div class="col-lg-3">
+                   <p><sm>May 2019 - July 2020 <br />
+                   Tysons Corner, Virginia</sm></p>
+               </div>
+               
+               <!-- EDIT: work line 2-->
+               <div class="col-lg-6 col-lg-offset-3">
+                   <p class="tight"><t>Parkour Instructor</t><br/>
+                        Urban Evolution <br/>
+                   </p>
+                   <p><more>
+                        Designed new equipment and gym setup using 3D software<br/>
+                        Managed Construction and assembly of equipment<br/>
+                        Collaborated on development of in-house instructor certification.<br/>
+                        Assisted with social media presence<br/>
+                        Trained new instructors<br/>
+                        Taught Parkour and Freerunning
+                    </more></p>
+               </div>
+               <div class="col-lg-3">
+                   <p><sm>Sept 2017 – Feb 2020  <br />
+                   Arlington, Virginia</sm></p>
+               </div>
+
+            <!-- EDIT: work line 1 -->
+            <div class="col-lg-6 col-lg-offset-3">
+                <p class="tight"><t>Network Engineer </t><br/>
+                    NetCentrics Corp./Haystax Tech <br/>
+                </p>
+                <p><more>
+                    Tier I Helpdesk Technician responsible for managing the ticket queue and assigning tickets<br/>
+                    Created utility to monitor company’s internet speed at intervals throughout the day<br/>
+                    Responsible for managing AD users and computers<br/>
+                    Responsible for creating, managing, and deploying Windows 8.1 image<br/>
+                    Responsible for managing and deploying workstations<br/>
+                    Responsible to check all critical systems of the network on a daily basis<br/>
+                    Responsible to monitor the company’s Intrusion Detection System (IDS)<br/>
+                    Trained replacement in duties and tasks of my position                    
+                 </more></p>
+            </div>
+            <div class="col-lg-3">
+                <p><sm>Oct 2014 – Aug 2015 <br />
+                Dulles, Virginia</sm></p>
+            </div>
+       </div><!--/.row -->
+       <br>
+       <hr>
+   </div><!--/.container -->
+
+   <!-- AWARDS SECTION -->
+   <div class="container desc">
+    <div class="row">
+            <div class="col-lg-2 col-lg-offset-1">
+                <h5>Projects</h5>
+            </div>
+
+            <!-- EDIT: awards line 1-->
+            <div class="col-lg-6">
+                <p><t>Discord.py Bot</t><br/>
+                    This is an ongoing personal project making use of Python for the coding, a MariaDB (mysql) database to store information, both the Discord.py APIs and the Bungie.net APIs to interact with Discord and gather information from Destiny 2, and a REST API server running on Flask.   The bot is used to schedule group activities and provide players with information on their in-game characters via commands in a Discord Server.  This bot and its DB are hosted on Google Cloud VM running Linux.<br/>
+                </p>
+            </div>
+            <div class="col-lg-3">
+                <p><sm>Feb 2020 - Present</sm></p>
+            </div>
+
+            <!-- EDIT: awards line 1-->
+            <div class="col-lg-6 col-lg-offset-3">
+                <p><t>MSTR SDK Samples	</t><br/>
+                    As an intermittent project I worked to create fully documented and peer-reviewed samples for the official MicroStrategy SDK Samples Github<br/>
+                    MDSecurityFilter:  Demonstrates how to create an MD Security Filter.  This included code to create a filter expression and was built to be usable as a standalone method in other workflows.<br/>
+                    User and Object Search:  Two samples, the first allows you to search for a user by name, the second allows you to search for a specified type of object by name.  Both feature standalone methods that can be used in other code.<br/>
+                    Change Shortcut Description:  Demonstrate how to change the Description value of a MSTR Shortcut Object.  The sample contains a standalone method that can be used in other workflows.<br/>
+                    
+                </p>
+            </div>
+            <div class="col-lg-3">
+                <p><sm>Feb 2020 - June 2020</sm></p>
+            </div>
+            
+    
+        </div><!--/.row -->
+        <br>
+    </div><!--/.container -->
+
+   
+
 </body>
+
+<section id="contact" name="contact"></section>
+	<!--FOOTER DESCRIPTION -->
+	<div id="footwrap" class="footer">
+		<div class="container">
+			<div class="row">
+			
+				<div class="col-lg-2 col-lg-offset-1">
+					<h5>CONTACT</h5>
+				</div>
+				<!-- EDIT: email -->
+				<div class="col-lg-6">
+					<p><t>Email</t><br/>
+						<a href="mailto:michael.scarfi@gmail.com" class="mail">michael.scarfi@gmail.com</a> <br/>
+					</p>
+					<!-- EDIT: address -->
+					<p><t>Home Area</t><br/>
+						Falls Church, VA 22046 <br/>
+						United States of America<br/>
+					</p>
+					<!-- EDIT: phone number -->
+					<p><t>Phone</t><br/>
+						<a href="tel:5712340994" class="tel">(571) 234-0994</a> <br/>
+					</p>
+				</div>
+			</div><!--/.row -->
+		</div><!--/.container -->
+    </div><!--/ #footer -->
+    
 </html>
