--- a/REST_Server/templates/home.html
+++ b/REST_Server/templates/home.html
@@ -3,24 +3,13 @@
  <head>
    <title>Michael Scarfi</title>
    <!-- Bootstrap core CSS -->
-   <link href="css/bootstrap.css" rel="stylesheet">
-   <link rel="stylesheet" href="css/font-awesome.min.css">
+   <!--link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"-->
+   <link rel="stylesheet" href="../static/css/main.css">
 
-   <!-- Link the main.css stylesheet -->
-   <link href="css/main.css" rel="stylesheet">
-   
-   <!-- OPTIONAL: Google Fonts (don't forget to edit main.css also) -->
-   <link href='//fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
-   <link href='//fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
-
-   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-   <!--[if lt IE 9]>
-     <script src="js/html5shiv.js"></script>
-     <script src="js/respond.min.js"></script>
-   <![endif]-->
+   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
  </head>
  <body>
-
+    <div class="split left main">
 
 
    <div class="header" id="headerwrap">
@@ -48,7 +37,8 @@
            <h5>ABOUT</h5>
          </div>
          <div class="col-lg-6">
-  <p>I am an IT professional specializing in Developement, Technical Support, and System Administration.  I enjoy challenges and love to create.  I have a wide variety of skills, many of which were learned through self-taught or independt study.  </p>
+  <p>I am an IT professional specializing in Developement, Technical Support, and System Administration.  I enjoy challenges and love to create.<br/>
+      I have a wide variety of skills, many of which were learned through self-taught or independent study.  </p>
   </div>
          <div class="col-lg-3">
            <p><a href="https://drive.google.com/uc?export=download&id=1xRSqH6rdrwtlqzyYU_B3agmI1kulrWm1"><i class="icon-file"></i> <sm>Download PDF</sm></a></p>
@@ -56,72 +46,13 @@
    
        </div><!--/.row-->
      </div><!--/.container-->
-   </div><!--/ #intro-->
-<section id="resume" name="resume"></section>
-  <!-- Skills section -->
-  <div class="container desc">
-    <div class="row">
-
-            <div class="col-lg-2 col-lg-offset-1">
-                <h5>Certifications, Skills, Knowledge, and Expertise</h5>
-            </div>
-            <!-- EDIT: work line 1 -->
-            <div class="col-lg-6">
-                <p class="tight"><t>Programming/Data Science </t><br/>
-                </p>
-                <p>
-                    <more>
-                        IBM Machine Learning with Python certifiction<br/>
-                        Python3<br/>
-                        C and Java<br/>
-                        HTML, CSS, and Javascript<br/>
-                        REST API Server hosting and Integration<br/>
-                        MySql, MariaDB, Microsoft SQL<br/>
-                        MicroStrategy, Discord, and Bungie APIs<br/>
-                        3D modeling and game creation<br/>
-                        Survey knowledge of cryptology and game theory
-                </more></p>
-            </div>
-            
-            <div class="col-lg-6 col-lg-offset-3">
-                <p class="tight"><t>Systems and acrchitecture </t><br/>
-                </p>
-                <p>
-                    <more>
-                        CompTia Security+  (2016-2019 – Exp.)<br/>
-                        Topics of Cisco Certified Network Associate<br/>
-                        Linux (various distributions)<br/>
-                        Microsoft Windows OS<br/>
-                        Microsoft Server<br/>
-                        Microsoft AD<br/>
-                        MicroStrategy Intelligence-Server<br/>
-                        MicroStrategy SDK/APIs<br/>
-                        Windows Deployment Services (WDS)<br/>
-                        Apache Kafka and Zookeeper<br/>
-                        CMD and terminal interfaces
-                </more></p>
-            </div>
-            
-            <div class="col-lg-6 col-lg-offset-3">
-                <p class="tight"><t>Systems and acrchitecture </t><br/>
-                </p>
-                <p>
-                    <more>
-                        Eclipse, Visual Studio Code, Android Studio<br/>
-                        Microsoft Office<br/>
-                        MicroStrategy Web, Library, Mobile<br/>
-                        MicroStrategy Software and application<br/>
-                        Audio/Visual Equipment<br/>
-                        Salesforce<br/>
-                        Networking hardware<br/>
-                        Server hardware<br/>
-                        Desktop PC internal hardware
-                </more></p>
-            </div>
-    </div><!--/.row -->
-    <br>
+     <br>
     <hr>
-</div><!--/.container -->
+   </div><!--/ #intro-->
+
+
+<section id="resume" name="resume"></section>
+  
 
    <!-- WORK SECTION -->
    <div class="container desc">
@@ -195,7 +126,7 @@
        <hr>
    </div><!--/.container -->
 
-   <!-- AWARDS SECTION -->
+   <!-- Projects SECTION -->
    <div class="container desc">
     <div class="row">
             <div class="col-lg-2 col-lg-offset-1">
@@ -229,38 +160,135 @@
     
         </div><!--/.row -->
         <br>
+        <hr>
     </div><!--/.container -->
 
-   
+    <!-- Skills section -->
+    <div class="container desc">
+        <div class="row">
 
+            <div class="col-lg-2 col-lg-offset-1">
+                <h5>Detailed Certifications, Skills, Knowledge, and Expertise</h5>
+            </div>
+            <!-- EDIT: work line 1 -->
+            <div class="col-lg-6">
+                <p class="tight"><t>Programming/Data Science </t><br/>
+                </p>
+                <p>
+                    <more>
+                        IBM Machine Learning with Python certifiction<br/>
+                        Python3<br/>
+                        C and Java<br/>
+                        HTML, CSS, and Javascript<br/>
+                        REST API Server hosting and Integration<br/>
+                        MySql, MariaDB, Microsoft SQL<br/>
+                        MicroStrategy, Discord, and Bungie APIs<br/>
+                        3D modeling and game creation<br/>
+                        Survey knowledge of cryptology and game theory
+                </more></p>
+            </div>
+            
+            <div class="col-lg-6 col-lg-offset-3">
+                <p class="tight"><t>Systems and architecture </t><br/>
+                </p>
+                <p>
+                    <more>
+                        CompTia Security+  (2016-2019 – Exp.)<br/>
+                        Topics of Cisco Certified Network Associate<br/>
+                        Linux (various distributions)<br/>
+                        Microsoft Windows OS<br/>
+                        Microsoft Server<br/>
+                        Microsoft AD<br/>
+                        MicroStrategy Intelligence-Server<br/>
+                        MicroStrategy SDK/APIs<br/>
+                        Windows Deployment Services (WDS)<br/>
+                        Apache Kafka and Zookeeper<br/>
+                        CMD and terminal interfaces
+                </more></p>
+            </div>
+            
+            <div class="col-lg-6 col-lg-offset-3">
+                <p class="tight"><t>Software and Hardware</t><br/>
+                </p>
+                <p>
+                    <more>
+                        Eclipse, Visual Studio Code, Android Studio<br/>
+                        Microsoft Office<br/>
+                        MicroStrategy Web, Library, Mobile<br/>
+                        MicroStrategy Software and application<br/>
+                        Audio/Visual Equipment<br/>
+                        Salesforce<br/>
+                        Networking hardware<br/>
+                        Server hardware<br/>
+                        Desktop PC internal hardware
+                </more></p>
+            </div>
+    </div><!--/.row -->
+    <br>
+    <hr>
+</div><!--/.container -->
+
+   
+</div>
+<div class="split right margin">
+    <section id="contact" name="contact"></section>
+	<!--FOOTER DESCRIPTION -->
+        <div>
+            <h5>CONTACT</h5>
+        </div>
+        <!-- EDIT: email -->
+        <div>
+            <p><t>Email</t><br/>
+                <a href="mailto:michael.scarfi@gmail.com" class="mail">michael.scarfi@gmail.com</a> <br/>
+            </p>
+            <!-- EDIT: address -->
+            <p><t>Home Area</t><br/>
+                Falls Church, VA 22046 <br/>
+                United States of America<br/>
+            </p>
+            <!-- EDIT: phone number -->
+            <p><t>Phone</t><br/>
+                <a href="tel:5712340994" class="tel">(571) 234-0994</a> <br/>
+            </p>
+        </div>
+
+        <div>
+            <h5>SKILLS</h5>
+        </div>
+        <!-- EDIT: email -->
+        <div class="skills">
+            <t>Developer</t>
+            <p>
+                Python, Java<br/>
+                MariaDB, MySQL <br/>
+                REST APIs<br/>
+            </p>
+            <t>System Admin</t>
+            <p>
+                Networking<br/>
+                Security+ (2016-2019)<br/>
+                Windows<br/>
+                Linux<br/>
+                Apache<br/>
+                Hardware<br/>
+                MicroStrategy<br/>
+                Google Cloud<br/>
+            </p>
+            <t>User</t>
+            <p>
+                IDEs<br/>
+                Office365<br/>
+                MicroStrategy <br/>
+                Salesforce <br/>
+                Slack <br/>
+                Discord <br/>
+            </p>
+
+        </div>
+			
+</div>
 </body>
 
-<section id="contact" name="contact"></section>
-	<!--FOOTER DESCRIPTION -->
-	<div id="footwrap" class="footer">
-		<div class="container">
-			<div class="row">
-			
-				<div class="col-lg-2 col-lg-offset-1">
-					<h5>CONTACT</h5>
-				</div>
-				<!-- EDIT: email -->
-				<div class="col-lg-6">
-					<p><t>Email</t><br/>
-						<a href="mailto:michael.scarfi@gmail.com" class="mail">michael.scarfi@gmail.com</a> <br/>
-					</p>
-					<!-- EDIT: address -->
-					<p><t>Home Area</t><br/>
-						Falls Church, VA 22046 <br/>
-						United States of America<br/>
-					</p>
-					<!-- EDIT: phone number -->
-					<p><t>Phone</t><br/>
-						<a href="tel:5712340994" class="tel">(571) 234-0994</a> <br/>
-					</p>
-				</div>
-			</div><!--/.row -->
-		</div><!--/.container -->
-    </div><!--/ #footer -->
+
     
 </html>
