improved home.html
additional improvements to home.html.

--- a/REST_Server/templates/home.html
+++ b/REST_Server/templates/home.html
@@ -19,10 +19,6 @@
            <h1>Michael Scarfi</h1>
            <h3>Developer, Engineer, System Administrator |
             <a href="mailto:michael.scarfi@gmail.com">michael.scarfi@gmail.com</a>
-            |
-            <a href="https://github.com/michaelScarfi">github</a>
-            |
-            <a href="https://www.linkedin.com/in/michael-scarfi-9a8b0b114/">LinkedIn</a>
            </h3>
          </div><!--/.col-lg-12-->
        </div><!--/.row-->
@@ -238,6 +234,12 @@
         </div>
         <!-- EDIT: email -->
         <div>
+            <p>
+                <t>Profiles</t><br/>
+                <a href="https://github.com/michaelScarfi">GitHub</a>
+                |
+                <a href="https://www.linkedin.com/in/michael-scarfi-9a8b0b114/">LinkedIn</a>
+            </p>
             <p><t>Email</t><br/>
                 <a href="mailto:michael.scarfi@gmail.com" class="mail">michael.scarfi@gmail.com</a> <br/>
             </p>
@@ -252,6 +254,8 @@
             </p>
         </div>
 
+
+        
         <div>
             <h5>SKILLS</h5>
         </div>
