--- a/REST_Server/templates/home.html
+++ b/REST_Server/templates/home.html
@@ -7,6 +7,8 @@
    <link rel="stylesheet" href="../static/css/main.css">
 
    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
+   <link rel="icon" href="https://drive.google.com/uc?export=view&id=1GRYmllW4Ig9LvsNldcOyU3rpbZPb6fD_">
  </head>
  <body>
     <div class="split left main">
