Updates to REST Server

--- a/REST_Server/templates/success.html
+++ b/REST_Server/templates/success.html
@@ -3,8 +3,7 @@
     <head>
         <title>Successful</title>
         <!-- Bootstrap core CSS -->
-        <!--link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"-->
-        <link rel="stylesheet" href="../static/css/main.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
@@ -17,7 +16,7 @@
                 You have successfully authenticated with Bungie.net
             </h2>
             <h1>
-                <img src="https://www.bungie.net/{{icon_url}}" alt="Icon not found" style="width:25px;height:25px;"> 
+                <img src="https://www.bungie.net{{icon_url}}" alt="Icon not found" style="width:25px;height:25px;"> 
                 <more>
                     {{name}}
                 </more>
