--- a/REST_Server/templates/home.html
+++ b/REST_Server/templates/home.html
@@ -31,14 +31,23 @@
    <div class="about">
      <div class="container">
        <div class="row"> 
+        <div class="col-lg-2 col-lg-offset-1">
+            <h5>ABOUT THIS SITE</h5>
+                 </div>
+                     <div class="col-lg-6">
+                         <p>This page is a demo home page for my REST server.  This page is being hosted through a REST API endpoing running on Flask.  Flask is being served through uWSGI and I am using NGINX as a reverse proxy to serve the application.</p>
+                     </div>
+                 <div class="col-lg-3">
+            <p><a href="https://github.com/michaelScarfi/Discord-Bot"><i class="icon-file"></i> <sm>Project Page</sm></a></p>
+        </div>
          <div class="col-lg-2 col-lg-offset-1">
-           <h5>ABOUT</h5>
-         </div>
-         <div class="col-lg-6">
-  <p>I am an IT professional specializing in Developement, Technical Support, and System Administration.  I enjoy challenges and love to create.<br/>
-      I have a wide variety of skills, many of which were learned through self-taught or independent study.  </p>
-  </div>
-         <div class="col-lg-3">
+           <h5>ABOUT ME</h5>
+                </div>
+                    <div class="col-lg-6">
+                        <p>I am an IT professional specializing in Developement, Technical Support, and System Administration.  I enjoy challenges and love to create.<br/>
+                        I have a wide variety of skills, many of which were learned through self-taught or independent study.  </p>
+                    </div>
+                <div class="col-lg-3">
            <p><a href="https://drive.google.com/uc?export=download&id=1xRSqH6rdrwtlqzyYU_B3agmI1kulrWm1"><i class="icon-file"></i> <sm>Download PDF</sm></a></p>
          </div>
    
@@ -194,13 +203,14 @@
                         CompTia Security+  (2016-2019 – Exp.)<br/>
                         Topics of Cisco Certified Network Associate<br/>
                         Linux (various distributions)<br/>
+                        Nginx, uWSGI, Flask
+                        Apache Kafka and Zookeeper<br/>
                         Microsoft Windows OS<br/>
                         Microsoft Server<br/>
                         Microsoft AD<br/>
                         MicroStrategy Intelligence-Server<br/>
                         MicroStrategy SDK/APIs<br/>
                         Windows Deployment Services (WDS)<br/>
-                        Apache Kafka and Zookeeper<br/>
                         CMD and terminal interfaces
                 </more></p>
             </div>
@@ -228,6 +238,7 @@
 
    
 </div>
+<!--Right Margin section -->
 <div class="split right margin">
     <section id="contact" name="contact"></section>
 	<!--FOOTER DESCRIPTION -->
@@ -261,13 +272,14 @@
         <div>
             <h5>SKILLS</h5>
         </div>
-        <!-- EDIT: email -->
+        <!-- Skills Section -->
         <div class="skills">
             <t>Developer</t>
             <p>
                 Python, Java<br/>
                 MariaDB, MySQL <br/>
                 REST APIs<br/>
+                Machine Learning<br/>
             </p>
             <t>System Admin</t>
             <p>
@@ -276,6 +288,7 @@
                 Windows<br/>
                 Linux<br/>
                 Apache<br/>
+                Nginx<br/>
                 Hardware<br/>
                 MicroStrategy<br/>
                 Google Cloud<br/>
@@ -291,6 +304,7 @@
             </p>
 
         </div>
+        <!-- Skills Section -->
 			
 </div>
 </body>
