--- a/REST_Server/templates/home.html
+++ b/REST_Server/templates/home.html
@@ -75,10 +75,12 @@
                                 MicroStrategy <br/>
                             </p>
                             <p><more>
+                                    Support Enginer (Promoted Feb 2020)
                                     Created SDK samples using Java and third party Java APIs that were professionally peer reviewed and published to github  for public use<br/>
                                     Performed advance troubleshooting of multiple areas of the MicroStrategy product including the MSTR SDK, APIs, and MicroStrategy packaged 3rd party tools such as Apache Kafka.<br/>
                                     Created Knowledge Base articles<br/>
-                                    Support Associate (May 2019 - Feb 2020)<br/>
+                                    <br/>
+                                    Support Associate<br/>
                                     Received training in troubleshooting MSTR Server, SDK, and Web products <br/>
                                     Began to fulfill the role of Support Engineer by taking Engineer cases<br/>
                                     Participated in MSTR training and become a certified MSTR Analyst and Architect<br/>
