Improved home page
Fixed margin issues.

--- a/REST_Server/templates/home.html
+++ b/REST_Server/templates/home.html
@@ -45,8 +45,8 @@
                         <h5>ABOUT ME</h5>
                                 </div>
                                     <div class="col-lg-6">
-                                        <p>I am an IT professional specializing in Developement, Technical Support, and System Administration.  I enjoy challenges and love to create.<br/>
-                                        I have a wide variety of skills, many of which were learned through self-taught or independent study.  </p>
+                                        <p>I am an IT professional specializing in Developement, Technical Support, and System Administration.  I enjoy challenges and love to create. 
+                                        I have a wide variety of skills, many of which were learned through self-teaching or independent study.  </p>
                                     </div>
                                 <div class="col-lg-3">
                         <p><a href="https://drive.google.com/uc?export=download&id=1xRSqH6rdrwtlqzyYU_B3agmI1kulrWm1"><i class="icon-file"></i> <sm>Download PDF</sm></a></p>
@@ -75,7 +75,7 @@
                                 MicroStrategy <br/>
                             </p>
                             <p><more>
-                                    Support Enginer (Promoted Feb 2020)
+                                    Support Enginer (Promoted Feb 2020)<br/>
                                     Created SDK samples using Java and third party Java APIs that were professionally peer reviewed and published to github  for public use<br/>
                                     Performed advance troubleshooting of multiple areas of the MicroStrategy product including the MSTR SDK, APIs, and MicroStrategy packaged 3rd party tools such as Apache Kafka.<br/>
                                     Created Knowledge Base articles<br/>
