--- a/REST_Server/static/css/main.css
+++ b/REST_Server/static/css/main.css
@@ -23,14 +23,6 @@ sm {
     font-size: 95%;
 }
 
-/* Split the screen in half */
-.split {
-    height: 100%;
-    
-    position: absolute;
-    z-index: 1;
-    top: 0;
-  }
   
 /* Control the left side */
 .left {
@@ -39,7 +31,8 @@ sm {
     float: left;
     width: 75%;
     height: 100%;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
   }
   
   /* Control the right side */
@@ -74,6 +67,7 @@ body {
     background-size: cover;
     backdrop-filter: blur(6px);
     height: 100%;
+    margin: 0px
 }
 
 .center {
