--- a/REST_Server/static/css/main.css
+++ b/REST_Server/static/css/main.css
@@ -76,3 +76,64 @@ body {
     position: relative;
     height: 100%;
 }
+
+.titleBox { 
+    font-family: 'Roboto', sans-serif;
+    background-color: rgb(216, 216, 216);
+    margin: auto;
+    width: 50%;
+    height: 15%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+}
+
+.title {
+    background-color: rgb(49, 50, 51);
+    color: rgb(216, 216, 216);
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    height: 100%;
+}
+
+.titleText {
+    font-size: 350%;
+    font-style: bold;
+    height: auto;
+    letter-spacing: 2px;
+    margin: 0;
+    padding: 0;
+}
+
+
+@media screen and (max-width: 1000px) {
+    .titleBox{
+        width: 60%;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .titleBox{
+        width: 70%;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .titleBox{
+        width: 100%;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .titleText {
+        font-size: 200%
+    }
+}
