--- a/REST_Server/templates/analysis.html
+++ b/REST_Server/templates/analysis.html
@@ -55,7 +55,7 @@ MathJax.Hub.Config({
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><a href="https://github.com/michaelScarfi/Destiny-Skill-Analysis/blob/master/Crucible%20Survival%20Analysis%20Enlarged%20Dataset.ipynb">Access/Download Notebook</a></p>
+<p><a href="https://github.com/michaelScarfi/Destiny-Skill-Analysis/blob/master/Crucible%20Survival%20Analysis%20Enlarged%20Dataset.ipynb">Access</a> | <a href="https://raw.githubusercontent.com/michaelScarfi/Destiny-Skill-Analysis/master/Crucible%20Survival%20Analysis%20Enlarged%20Dataset.ipynb" download>Download</a> Notebook</p>
 
 </div>
 </div>
@@ -741,16 +741,16 @@ A negative value indicates that the field contributes to a winning (0) probabili
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>Team weights
-     0         0
-0    kills -0.375103
-1   deaths  0.378767
-2  assists -0.030492
+              
+    kills -0.375103
+   deaths  0.378767
+  assists -0.030492
 
 Team/minute weights
-     0         0
-0    kills -5.420541
-1   deaths  5.510833
-2  assists -0.260385
+             
+    kills -5.420541
+   deaths  5.510833
+  assists -0.260385
 </pre>
 </div>
 </div>
@@ -805,16 +805,16 @@ In short we did learn too much from team stats except that more team assists gen
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>Guardian weights
-     0         0
-0    kills -0.192050
-1   deaths  0.425820
-2  assists -0.394876
+              
+    kills -0.192050
+   deaths  0.425820
+  assists -0.394876
 
 Guardian/minute weights
-     0         0
-0    kills -1.838531
-1   deaths  5.654579
-2  assists -4.052705
+             
+    kills -1.838531
+   deaths  5.654579
+  assists -4.052705
 </pre>
 </div>
 </div>
