--- a/REST_Server/templates/home.html
+++ b/REST_Server/templates/home.html
@@ -20,9 +20,9 @@
                     <div class="col-lg-12">
                         <h2 class="titleText">Michael J. Scarfi</h2>
                         <hr>
-                        <h3><a href="https://github.com/michaelScarfi/Discord-Bot">Sundance GitHub </a> |
-                            <a href="destiny.scarfi.me/analysis">Destiny 2 Crucible Analysis</a> |
-                            <a href="destiny.scarfi.me/resume">Resume</a> 
+                        <h3><a href="https://github.com/michaelScarfi/Discord-Bot">Sundance Discord Bot</a> |
+                            <a href="https://destiny.scarfi.me/analysis">Destiny 2 Crucible Analysis</a> |
+                            <a href="https://destiny.scarfi.me/resume">Resume</a> 
                         </h3>
                     </div><!--/.col-lg-12-->
                 </div><!--/.row-->
