--- a/REST_Server/templates/home.html
+++ b/REST_Server/templates/home.html
@@ -20,7 +20,7 @@
                     <div class="col-lg-12">
                         <h2 class="titleText">Michael J. Scarfi</h2>
                         <hr>
-                        <h3><a href="https://github.com/michaelScarfi/Discord-Bot">Sundance Discord Bot</a> |
+                        <h3><a href="https://destiny.scarfi.me/sundance">Sundance Discord Bot</a> |
                             <a href="https://destiny.scarfi.me/analysis">Destiny 2 Crucible Analysis</a> |
                             <a href="https://destiny.scarfi.me/resume">Resume</a> 
                         </h3>
