Setting up power and level commands to be used without steam_name
Setup commands to be able to run using oauth instead of needing to provide an account name.

--- a/REST_Server/templates/resume.html
+++ b/REST_Server/templates/resume.html
@@ -4,6 +4,7 @@
    <title>Michael Scarfi</title>
    <!-- Bootstrap core CSS -->
    <!--link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"-->
+   <link rel="stylesheet" href="/static/css/main.css">
    <link rel="stylesheet" href="../static/css/main.css">
 
    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
